--- a/stylesheet_main.qss
+++ b/stylesheet_main.qss
@@ -33,7 +33,7 @@ QLineEdit{
     border: 2px solid #000;
     border-radius: 5px;
 }
-QPushButton{;
+QPushButton{
     font-size: 23px;
     border-radius: 5px;
     background: #004444;
@@ -51,10 +51,10 @@ QSlider::handle:horizontal{
     margin-left: -10px;
 }
 QSlider::sub-page:horizontal{
-    background: rgb(230, 90, 0);
+    background: rgb(200, 60, 0);
 }
 QSlider::groove:horizontal{
-    background: orange;
+    background: rgb(230, 90, 0);
     height: 23px;
 }
 QPushButton#btn_qss_reload{
