--- a/uiFiles/mainWindow.ui
+++ b/uiFiles/mainWindow.ui
@@ -445,6 +445,12 @@
              <height>10</height>
             </size>
            </property>
+           <property name="maximum">
+            <number>18</number>
+           </property>
+           <property name="pageStep">
+            <number>1</number>
+           </property>
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
