--- a/stylesheet_main.qss
+++ b/stylesheet_main.qss
@@ -76,3 +76,6 @@ QFrame#fr_game_board{
 /* QFrame# 0x00000254978AD2C0 > QLabel:hover{
     background #00ff00
 } */
+/* QFrame{
+    background: lime;
+} */
