--- a/uiFiles/mainWindow.ui
+++ b/uiFiles/mainWindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1326</width>
+    <width>1232</width>
     <height>992</height>
    </rect>
   </property>
@@ -207,6 +207,12 @@
          </item>
          <item>
           <widget class="QSlider" name="sl_player1">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>50</height>
+            </size>
+           </property>
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
@@ -456,17 +462,20 @@
              <property name="maximumSize">
               <size>
                <width>16777215</width>
-               <height>50</height>
+               <height>75</height>
               </size>
              </property>
              <property name="maximum">
               <number>18</number>
              </property>
+             <property name="singleStep">
+              <number>1</number>
+             </property>
              <property name="pageStep">
               <number>1</number>
              </property>
              <property name="value">
-              <number>4</number>
+              <number>1</number>
              </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
@@ -480,6 +489,18 @@
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>75</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>75</height>
+              </size>
              </property>
              <property name="text">
               <string>Render</string>
@@ -632,6 +653,15 @@
          </item>
          <item>
           <widget class="QSlider" name="sl_player2">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>50</height>
+            </size>
+           </property>
+           <property name="value">
+            <number>0</number>
+           </property>
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
